--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,11 @@
 buildscript {
     repositories {
-        maven { url 'http://dl.bintray.com/jetbrains/intellij-plugin-service' }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     }
-
 }
 
 plugins {
-    id "org.jetbrains.intellij" version "0.4.10"
+    id "org.jetbrains.intellij" version "0.4.1"
     id "org.jetbrains.kotlin.jvm" version "1.3.41"
 }
 
