解决插件安装报错：failed to load plugin descriptor codemaker 的问题

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -56,7 +56,7 @@
     <depends>com.intellij.modules.lang</depends>
     -->
     <depends>com.intellij.modules.java</depends>
-    <depends optional="true" config-file="">org.intellij.scala</depends>
+<!--    <depends optional="true" config-file="">org.intellij.scala</depends>-->
 
     <extensions defaultExtensionNs="com.intellij">
         <!-- Add your extensions here -->
